--- a/.github/workflows/flake9-pytest.yml
+++ b/.github/workflows/flake9-pytest.yml
@@ -10,7 +10,9 @@ on:
     branches: ['**', '!main']
   pull_request:
     branches: [ main ]
-
+#   schedule:
+#         # * is a special character in YAML so you have to quote this string
+#     - cron:  '30 5,17 * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
