--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -14,6 +14,20 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - run: echo "hello from shell"
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.8"
+      - name: Install dependencies
+        run: |
+        python -m pip install --upgrade pip
+        python -m pip install pytest
+        if [ -f ejemplo/requirements.txt ]; then pip install -r ejemplo/requirements.txt; fi
+      - name: Test with pytest
+        run: |
+        pytest ejemplo/tests/unit/test_nombres.py -v
+        pytest ejemplo/tests/integration/test_integracion.py -v
     #   - uses: actions/checkout@v3
     #   - name: Set up Python 3.8
     #     uses: actions/setup-python@v3
@@ -24,11 +38,3 @@ jobs:
     #       python -m pip install --upgrade pip
     #       pip install flake8
     #       if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    #   - name: Run flake8
-    #     run: |
-    #       # ignore errors
-    #       flake8 --ignore=E1,E23,W503,F403,F401,E402,E501 ejemplo/tests/unit/test_nombres.py ejemplo/tests/integration/test_integracion.py
-    #       # stop the build if there are Python syntax errors or undefined names
-    #       flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-    #       # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-    #       flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
